Update success color and font family

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,8 @@
     <script defer src="/__/firebase/5.5.1/firebase-storage.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
   </head>
   <body>
     <noscript>
