--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <!-- <link rel="icon" href="<%= BASE_URL %>favicon.ico"> -->
-    <title>Welcome to Vue Demo Site</title>
+    <title>Gourmand</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/5.5.1/firebase-app.js"></script>
